# team-orchestration-skill

./: .gitignore  AUDIT-REPORT.md  PLAN-v2.6-enhancement.md  README.md  SKILL.md  TASKS-v2.6-p0.md  pyproject.toml
references/: 3-tier-hierarchical-loading.md  communication.md  cross-validation.md  dependency-management.md  enhancement-batch-management.md  expert-files-organization.md  expert-knowledge-pool.md  expert-matching.md  first-principles.md  handoff-protocol.md  handoff-spec.md  knowledge-team-workflow.md  loop-engineering-research.md  patterns.md  phase-gates.md  problem-solving-panel.md  self-evolution-protocol.md  self-healing-architecture.md  task-decomposition-v2.3.md  task-lifecycle.md  team-brain-protocol.md  team-setup.md
scripts/: _fault_types.py  _logging.py  _memory_collector.py  _paths.py  audit-team-counts.py  auto-decider.py  budget-controller.py  cross-validator.py  detect-mojibake.py  deterministic_checker.py  expert-matcher.py  expert_matcher.py  failure-analyzer.py  file_utils.py  fix-encoding-bom.py  health-dashboard.py  health-monitor.py  health_dashboard.py  intent_classifier.py  migrate-workbuddy.py  orchestrator.py  problem_solver.py  rollback_manager.py  score_collector.py  self_heal.py  synthesis-check.py  task-decomposer.py  task_decomposer.py  team-brain.py  team_builder.py  template_cropper.py
shared/: cropping-config.json  expert-scores.json  exploration-log.json  manifest-post-s2.json  snapshot-pre-v2.6.xml  teams-index.json  teams-tier.json  token-ledger.json  weight-matrix.json
tests/: conftest.py  test_auto_decider.py  (+21 more)
(+793 files in other folders)
