[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
source = ["scripts"]
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_covered = true
